<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlayerActivity"
    android:gravity="center">

    <!-- Top header layout with back button, title, and favorite button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">

        <!-- Back button -->
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:background="@android:color/transparent"
            android:src="@drawable/arrow_back"
            app:tint="@color/black"
            android:contentDescription="@string/back_btn"/>

        <!-- Title text view (centered) -->
        <TextView
            android:layout_width="@dimen/_0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/world_of_music"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins"
            android:textSize="@dimen/_20sp"
            android:contentDescription="@string/text"/>

        <!-- Favorite button -->
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5dp"
            android:background="@android:color/transparent"
            android:src="@drawable/emty_favorite"
            app:tint="@color/dark_red"
            android:contentDescription="@string/empty_favorite_btn"/>
    </LinearLayout>

    <!-- Album artwork or song image -->
    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="@dimen/_300dp"
        android:layout_height="@dimen/_300dp"
        android:layout_margin="@dimen/_10dp"
        android:src="@drawable/group"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="@color/cool_blue"
        app:strokeWidth="5dp"/>

    <!-- Song name display -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/song_name"
        android:layout_weight="1"/>

    <!-- Playback control buttons (Previous, Pause/Play, Next) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_10dp"
        android:gravity="center"
        android:layout_weight="1">

        <!-- Previous button -->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            app:icon="@drawable/navigate_before"
            app:iconSize="40dp"
            android:backgroundTint="@color/cool_blue"/>

        <!-- Pause/Play button -->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            app:icon="@drawable/pause"
            android:layout_marginHorizontal="25dp"
            app:iconSize="50dp"
            android:backgroundTint="@color/holo_red_light"
            app:shapeAppearanceOverlay="@style/curved"
            app:iconTint="@color/white"/>

        <!-- Next button -->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            app:icon="@drawable/next_icon"
            app:iconSize="40dp"
            android:backgroundTint="@color/cool_blue"/>
    </LinearLayout>

    <!-- Progress and timer bar (SeekBar and time display) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <!-- Start time (00:00) -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/_00_00"
            android:fontFamily="@font/poppins"/>

        <!-- SeekBar for progress control -->
        <androidx.appcompat.widget.AppCompatSeekBar
            android:layout_width="@dimen/_0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <!-- End time (Loading) -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:gravity="center"
            android:fontFamily="@font/poppins"
            android:text="@string/loading"/>
    </LinearLayout>

    <!-- Additional control buttons (Repeat, Equalizer, Timer, Share) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <!-- Repeat button -->
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/repeat_btn"
            android:src="@drawable/repeat"
            app:tint="@color/cool_pink" />

        <!-- Equalizer button -->
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/eq_btn"
            android:src="@drawable/graphic_eq"
            app:tint="@color/cool_pink" />

        <!-- Timer button -->
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/timer_btn"
            android:src="@drawable/outline_timer"
            app:tint="@color/cool_pink" />

        <!-- Share button -->
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/share_btn"
            android:src="@drawable/share"
            app:tint="@color/cool_pink"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
